policies/security/allow-external-api.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-external-api
spec:
  tier: security
  order: 900
  selector: all()
  types:
    - Egress
  egress:
    - action: Allow
      destination:
        nets:
          - 203.0.113.0/24
